<resources>
    <string name="app_name">Sweat4Success</string>
    <string name="username_e_mail">UserName/E-Mail</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share" />
    <string name="friends" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="createaccount">CreateAccount</string>
</resources>